Alterando configuração padrão de SMTP

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ DEVISE_SECRET_KEY=0123456789abcdef
 APP_SECRET_TOKEN=0123456789abcdef
 
 SMTP_ADDRESS=smtp.domain.net
+SMTP_PORT=587
 SMTP_DOMAIN=email.com
 SMTP_USERNAME=your@email.com
 SMTP_PASSWORD=secret
