Adicionando validação de lista com email_verifier

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ SMTP_DOMAIN=email.com
 SMTP_USERNAME=your@email.com
 SMTP_PASSWORD=secret
 SMTP_FROM='From Name <your@email.com>'
+
+VERIFIER_EMAIL_FROM=your@email.com
