Adicionando task de backup alternativa

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Set your custom environment variables here. Such as API Keys:
 
 PATH=$PATH
+REMOTE_PATH=user@host
 
 APP_NAME=yourapp
 APP_USER=youruser
